--- a/resources/design.css
+++ b/resources/design.css
@@ -55,6 +55,8 @@ body
         max-width: none;
         width: auto;
         min-width: 100%;
+        white-space: nowrap;
+        text-overflow: clip;
 }
 
 #caseworklist 
